@@ -47,6 +47,7 @@
 #define MAX_PATH 256
 #endif
 
+
 /* structure with all the drive-specific data for our emulated drives */
 EMULATEDDRIVE **emudrives = NULL;
 
@@ -167,108 +168,6 @@ char *pszGemDOSNames[] = {
 
 unsigned char GemDOS_ConvertAttribute(mode_t mode);
 
-
-
-#ifdef __BEOS__
-/* The scandir() and alphasort() functions aren't available on BeOS, */
-/* so let's declare them here... */
-
-#undef DIRSIZ
-
-#define DIRSIZ(dp)                                          \
-        ((sizeof(struct dirent) - sizeof(dp)->d_name) +     \
-		(((dp)->d_reclen + 1 + 3) &~ 3))
-
-
-/* ** scandir ** */
-
-int scandir(const char *dirname,struct dirent ***namelist, int(*select) __P((struct dirent *)), int (*dcomp) __P((const void *, const void *)))
-{
-  register struct dirent *d, *p, **names;
-  register size_t nitems;
-  struct stat stb;
-  long arraysz;
-  DIR *dirp;
-
-  if ((dirp = opendir(dirname)) == NULL)
-    return(-1);
-
-  if (fstat(dirp->fd, &stb) < 0)
-    return(-1);
-
-  /*
-   * estimate the array size by taking the size of the directory file
-   * and dividing it by a multiple of the minimum size entry.
-   */
-  arraysz = (stb.st_size / 24);
-
-  names = (struct dirent **)malloc(arraysz * sizeof(struct dirent *));
-  if (names == NULL)
-    return(-1);
-
-  nitems = 0;
-
-  while ((d = readdir(dirp)) != NULL) {
-
-     if (select != NULL && !(*select)(d))
-       continue;       /* just selected names */
-
-     /*
-      * Make a minimum size copy of the data
-      */
-
-     p = (struct dirent *)malloc(DIRSIZ(d));
-     if (p == NULL)
-       return(-1);
-
-     p->d_ino = d->d_ino;
-     p->d_reclen = d->d_reclen;
-     //p->d_namlen = d->d_namlen;
-     bcopy(d->d_name, p->d_name, p->d_reclen + 1);
-
-     /*
-      * Check to make sure the array has space left and
-      * realloc the maximum size.
-      */
-
-     if (++nitems >= arraysz) {
-
-       if (fstat(dirp->fd, &stb) < 0)
-         return(-1);     /* just might have grown */
-
-       arraysz = stb.st_size / 12;
-
-       names = (struct dirent **)realloc((char *)names, arraysz * sizeof(struct dirent *));
-       if (names == NULL)
-         return(-1);
-     }
-
-     names[nitems-1] = p;
-   }
-
-   closedir(dirp);
-
-   if (nitems && dcomp != NULL)
-     qsort(names, nitems, sizeof(struct dirent *), dcomp);
-
-   *namelist = names;
-
-   return(nitems);
-}
-
-
-/*
- * Alphabetic order comparison routine for those who want it.
- */
-
-/* ** alphasort ** */
-
-int alphasort(const void *d1, const void *d2)
-{
-  return(strcmp((*(struct dirent **)d1)->d_name, (*(struct dirent **)d2)->d_name));
-}
-
-#endif /* __BEOS__ */
 
 
 
