@@ -12,11 +12,11 @@ enum {
   FILEFILTER_MEMORYFILE,
 };
 
-extern void File_Init(void);
-extern BOOL File_OpenDlg(char *pFullFileName,int Drive);
-/*extern BOOL File_OpenDlg_NoExtraButtons(HWND hWnd, char *pFullFileName);*/
-/*extern BOOL File_OpenBrowseDlg(HWND hWnd, char *pFullFileName,BOOL bTosROM,BOOL bFileMustExist);*/
-extern BOOL File_OpenSelectDlg(char *pFullFileName,int FileFilter,BOOL bFileMustExist,BOOL bSaving);
+#ifdef __BEOS__
+extern int alphasort(const void *d1, const void *d2);
+extern int scandir(const char *dirname,struct dirent ***namelist, int(*select) __P((struct dirent *)), int (*dcomp) __P((const void *, const void *)));
+#endif  /* __BEOS__ */
+
 extern void File_CleanFileName(char *pszFileName);
 extern void File_AddSlashToEndFileName(char *pszFileName);
 extern BOOL File_DoesFileExtensionMatch(char *pszFileName, char *pszExtension);
@@ -33,3 +33,5 @@ extern BOOL File_Exists(char *pszFileName);
 extern BOOL File_Delete(char *pszFileName);
 extern BOOL File_QueryOverwrite(char *pszFileName);
 extern BOOL File_FindPossibleExtFileName(char *pszFileName,char *ppszExts[]);
+extern void File_splitpath(char *pSrcFileName, char *pDir, char *pName, char *Ext);
+extern void File_makepath(char *pDestFileName, char *pDir, char *pName, char *pExt);
